4/1/2005
	- Use java.nio classes for sockets internally, which provide a
	  number of improvements, most visibly improved timeouts.
	- Remove deprecated dns class.
	- Simplify TSIG initialization; remove functions that should
	  have never existed.

3/29/2005
	- Use java.net.InetAddress for IPv6 addresses rather than a custom
	  class.

3/20/2005
	- Fix several bugs in ResolverConfig on Windows.
	  (Brian McBarron <bmcbarron@users.sourceforge.net>)

3/15/2005
	- Clean up the synchronization in the RRset class
	  (reported by Daniel Jensen <daniel.jensen@savvis.net>)

3/8/2005
	- Support the BIND misfeature of loading zones with no explicit
	  TTL by using the SOA minimum field.

3/7/2005
	- 1.6.6 released.

3/6/2005
	- $GENERATE statements should obey the start field.

3/1/2005
	- Add support for HMAC-SHA1 and HMAC-SHA256 TSIG algorithms.
	  (suggested by Olafur Gudmundsson <ogud@ogud.com>)

2/8/2005
	- Add infrastructure for parsing the output of ipconfig on
	  non-English version of windows, and add support for German
	  and Polish. (based on a patch by Piotr Kochanski)

2/7/2005
	- Add Options.refresh() (based on a patch from Th Kuhne)
	- Add the ResolverConfig class, which is largely based on the
	  FindServer class, except that it's not all static methods.
	  Add the ability to refresh the current ResolverConfig, and
	  make FindServer use ResolverConfig.
	- Add Lookup.refreshDefault (based on a patch from Th Kuhne)
	- Truncated messages aren't guaranteed to parse properly, so shouldn't
	  throw exceptions. (reported by Caleb Richardson <caleb@everyone.net>)
	- Work around a TCP bug in whatever broken nameserver Enom is using.
	  (reported by Caleb Richardson <caleb@everyone.net>)

2/4/2005
	- 1.6.5 released.
	- Records of an unknown type and length 0 weren't handled properly.
	  (reported by Olafur Gudmundsson <ogud@ogud.com>)
	- Fixed a bug in $INCLUDE handling.
	  (Christian Sepulveda <christian.sepulveda@nominum.com>)

2/3/2005